--- a/app/src/main/res/layout/item_weather_row.xml
+++ b/app/src/main/res/layout/item_weather_row.xml
@@ -17,6 +17,7 @@
             android:layout_width="@dimen/local_width"
             android:layout_height="0dp"
             android:background="@drawable/background_table_local"
+            android:padding="@dimen/local_padding"
             android:text="@{weather.local}"
             android:textColor="@color/local_text"
             app:layout_constraintBottom_toBottomOf="parent"
