--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_800">#c62828</color>
+    <color name="gray_100">#f5f5f5</color>
+    <color name="gray_300">#e0e0e0</color>
 
-    <color name="header_background">#eeeeee</color>
+    <color name="header_background">@color/gray_100</color>
     <color name="local_text">#555555</color>
     <color name="divider">#dbdbdb</color>
 </resources>
