--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="icon_size">48dp</dimen>
+    <dimen name="icon_size">44dp</dimen>
     <dimen name="header_height">40dp</dimen>
     <dimen name="local_width">40dp</dimen>
+    <dimen name="local_padding">4dp</dimen>
 </resources>
