--- a/app/src/main/res/layout/include_weather.xml
+++ b/app/src/main/res/layout/include_weather.xml
@@ -20,7 +20,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_dialog_info" />
+            app:weatherAbbr="@{weather.stateAbbr}" />
 
         <TextView
             android:id="@+id/tvStateName"
