--- a/app/src/main/res/layout/include_weather.xml
+++ b/app/src/main/res/layout/include_weather.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="weather"
-            type="com.wotosts.recruit_backpacker.model.Weather" />
+            type="com.amber.sample.model.Weather" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
