--- a/app/src/main/res/layout/item_weather_row.xml
+++ b/app/src/main/res/layout/item_weather_row.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="weather"
-            type="com.wotosts.recruit_backpacker.model.WeatherRow" />
+            type="com.amber.sample.model.WeatherRow" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
