--- a/app/src/main/res/navigation/nav_weather.xml
+++ b/app/src/main/res/navigation/nav_weather.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_weather"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_weather"
     app:startDestination="@id/weatherFragment">
 
     <fragment
         android:id="@+id/weatherFragment"
         android:name="com.amber.sample.ui.WeatherFragment"
-        android:label="WeatherFragment" />
+        android:label="WeatherFragment" >
+        <action
+            android:id="@+id/action_weatherFragment_to_backStackFragment"
+            app:destination="@id/backStackFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/backStackFragment"
+        android:name="com.amber.sample.ui.BackStackFragment"
+        android:label="fragment_back_stack"
+        tools:layout="@layout/fragment_back_stack" />
 </navigation>
